# lab8

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  README.md  main.cpp
data/: data.txt
include/: film.h  requestHandler.h
scripts/: install-libprogbase.sh
src/: .requestHandler.cpp.swp  film.cpp  requestHandler.cpp
